# dek-wan-tube

./: .gitignore  Dockerfile  Dockerfile-compose  Dockerfile-extract  Dockerfile-update  docker-compose.yml
.github/workflows/: frontend-build.yml  gif-convertor-build.yml  web-controller-build.yml  web-controller.build.yml  work-queue-build.yml
k8s/: README.md  frontend-deployment.yaml  ingress.yaml  job-database-mariadb.yaml  minio-deployment.yaml  minio-deploymeny.yaml  redis.yaml  web-controller-deployment.yaml  work-queue.yaml  workers.yaml
script/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  test.py
thumbnailer-frontend/: Dockerfile  README.md  default.conf  package-lock.json  package.json  vue.config.js
web-controller/: Dockerfile  config.py  pyproject.toml  worker_compose.py  worker_extract.py  worker_update_status.py
web-controller/web_controller/: __init__.py  create_buckets.py  model.py  requirements.txt  wsgi.py
web-controller/web_controller/apis/: __init__.py  delete_gif_api.py  extract_all_video_api.py  get_all_job_ids.py  get_job_status_api.py  get_presigned_url_api.py  gif_list_api.py  submit_job_api.py  update_database_api.py  video_list_api.py
web-controller/web_controller/utils/: __init__.py  compose_worker.py  extract_worker.py  minio_update.py  work_queue.py  worker_utility.py
work-queue/: docker-compose.yml  pyproject.toml
work-queue/queue-wrapper/: Dockerfile  main.py
work-queue/src/: Dockerfile  composer_worker.py  dummy.py  extract_worker.py  main.py  utility.py  worker.py
work-queue/workers/extract-and-resize/: Dockerfile  extract_worker.py
work-queue/workers/gif-composer/: Dockerfile  gif_composer_worker.py
(+13 files in other folders)
