[tool.poetry]
name = "web-controller"
version = "0.1.0"
description = ""
authors = ["sudo-lucifer <krittin.niu@student.mahidol.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.37"
redis = "^4.3.3"
rq = "1.6.1"
minio = "^7.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
